# webcontent_converter

./: .fossa.yml  .gitignore  CHANGELOG.md  PAGINATION_TEST_RESULTS.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: integration_test.yml
android/: .project  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
darwin/: webcontent_converter.podspec
darwin/Classes/: ConversionQueue.swift  FLWebView.swift  Page.swift  PdfPageMerger.swift  PrintPreviewWindowMacOS.swift  RequestWatchdog.swift  SwiftWebcontentConverterPlugin.swift  WKWebView+Debug.swift  WebcontentConverterPlugin.h  WebcontentConverterPlugin.m
docs/superpowers/plans/: 2026-07-15-macos-multipage-pdf.md  2026-07-15-macos-pdf-zero-width-layout-bug-fix.md  2026-07-18-native-integration-tests.md  2026-07-19-android-webview-queue.md
docs/superpowers/specs/: 2026-07-15-macos-multipage-pdf-design.md  2026-07-15-macos-pdf-zero-width-layout-bug-design.md  2026-07-19-android-webview-queue-design.md  2026-07-19-darwin-webview-queue-design.md  2026-07-19-macos-native-print-preview-design.md  2026-07-21-windows-content-to-image-paper-format-design.md
example/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
example/android/: .project  build.gradle  settings.gradle
example/android/app/: .project  build.gradle
example/assets/: invoice.html  receipt.html  shift.html  short_receipt.html
example/integration_test/: webcontent_converter_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  main_batch_guard_repro_test.dart  main_image_repro_test.dart  main_large_content_repro_test.dart  main_logger_repro_test.dart  main_mixed_repro_test.dart  main_pdfimage_repro_test.dart  main_printpreview_repro_test.dart  main_queue_repro_test.dart  main_repro_test.dart  main_sustained_repro_test.dart  main_timing_repro_test.dart  route.dart
example/lib/screens/: content_image_screen.dart  content_pdf_image_screen.dart  content_pdf_screen.dart  error_screen.dart  filepath_image_screen.dart  filepath_pdf_screen.dart  home_screen.dart  webcontent_screen.dart  weburi_image_screen.dart  weburi_pdf_screen.dart  webview_screen.dart
example/lib/services/: PrinterService.dart  demo.dart  esc_printer_service.dart  extension.dart  index.html  invoice.html  label.html  webview_helper.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: webcontent_converter.podspec
ios/Classes/: FLWebView.swift  SwiftWebcontentConverterPlugin.swift  WebcontentConverterPlugin.h
lib/: chrome_directory_helper.dart  demo.dart  logger.dart  page.dart  revision_info.dart  web_support.dart  webcontent_converter.dart  webview_helper.dart  webview_widget.dart
macos/: webcontent_converter.podspec
macos/Classes/: FLWebView.swift  WebcontentConverterPlugin.swift
test/: native_channel_test.dart  webcontent_converter_test.dart
windows/: CMakeLists.txt  image_capture_request.cpp  image_capture_request.h  pdf_conversion_request.cpp  pdf_conversion_request.h  pdf_image_capture_request.cpp  pdf_image_capture_request.h  png_encoder.cpp  png_encoder.h  print_preview_window.cpp  print_preview_window.h  request_watchdog.cpp  request_watchdog.h  webcontent_converter_plugin.cpp  webcontent_converter_plugin.h  webcontent_converter_plugin_c_api.cpp  webview2_session.cpp  webview2_session.h
windows/include/webcontent_converter/: webcontent_converter_plugin_c_api.h
(+36 files in other folders)
